parser.output
   0  $accept : %entry% $end

   1  program : programs EOF

   2  programs :
   3           | programs funtion_declaration
   4           | programs vdecl

   5  funtion_declaration : FUNCTION ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : formal
   9              | formal_list COMMA formal

  10  formal : primitive_type ID
  11         | primitive_type ID LBRACK RBRACK

  12  vdecl_list :
  13             | vdecl_list vdecl

  14  vdecl : primitive_type varid SEMI
  15        | primitive_type arrayid SEMI

  16  varid : ID
  17        | varid COMMA ID

  18  arrayid : ID LBRACK RBRACK
  19          | arrayid COMMA ID LBRACK RBRACK

  20  primitive_type : VAR
  21                 | VECTOR
  22                 | VECSPACE
  23                 | MATRIX
  24                 | INSPACE
  25                 | AFFSPACE

  26  stmt_list :
  27            | function_statements

  28  function_statements : statement
  29                      | statement function_statements

  30  statement : expression SEMI
  31            | RETURN expression SEMI
  32            | LBRACE stmt_list RBRACE
  33            | IF expression LBRACE stmt_list RBRACE
  34            | IF expression LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
  35            | FOR VAR ID ASSIGN LITERAL COLON LITERAL LBRACE stmt_list RBRACE
  36            | WHILE expression LBRACE stmt_list RBRACE

  37  expression : LITERAL
  38             | ID
  39             | expression PLUS_DOT expression
  40             | expression MINUS_DOT expression
  41             | expression TIMES_DOT expression
  42             | expression DIVIDE_DOT expression
  43             | expression PLUS expression
  44             | expression MINUS expression
  45             | expression TIMES expression
  46             | expression DIVIDE expression
  47             | expression EQ expression
  48             | expression NEQ expression
  49             | expression LT expression
  50             | expression LEQ expression
  51             | expression GT expression
  52             | expression GEQ expression
  53             | ID ASSIGN expression
  54             | ID LPAREN arguments_opt RPAREN
  55             | LPAREN expression RPAREN
  56             | expression TRANSPOSE
  57             | LBRACK LBRACK expression COMMA expression RBRACK RBRACK
  58             | expression BELONGS expression
  59             | LT expression COMMA expression GT
  60             | vector
  61             | matrix
  62             | vector_space
  63             | inner_space
  64             | aff_space
  65             | arrays

  66  vector : LBRACK expression_list RBRACK

  67  expression_list : expression
  68                  | expression COMMA expression_list

  69  matrix : LBRACK matrix_elements_list RBRACK

  70  matrix_elements_list : row_elements_list
  71                       | row_elements_list matrix_elements_list

  72  row_elements_list : expression_list SEMI

  73  vector_space : VSCONST LPAREN expression_list RPAREN

  74  inner_space : INSPACE LPAREN expression COMMA expression RPAREN

  75  aff_space : AFFSPACE LPAREN expression COMMA expression RPAREN

  76  arrays : LBRACE expression_list RBRACE

  77  arguments_opt :
  78                | expression_list

  79  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (79)
	programs : .  (2)

	.  reduce 2

	program  goto 3
	programs  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (79)

	.  reduce 79


state 4
	program : programs . EOF  (1)
	programs : programs . funtion_declaration  (3)
	programs : programs . vdecl  (4)

	VAR  shift 5
	VECTOR  shift 6
	VECSPACE  shift 7
	MATRIX  shift 8
	INSPACE  shift 9
	AFFSPACE  shift 10
	FUNCTION  shift 11
	EOF  shift 12
	.  error

	funtion_declaration  goto 13
	vdecl  goto 14
	primitive_type  goto 15


state 5
	primitive_type : VAR .  (20)

	.  reduce 20


state 6
	primitive_type : VECTOR .  (21)

	.  reduce 21


state 7
	primitive_type : VECSPACE .  (22)

	.  reduce 22


state 8
	primitive_type : MATRIX .  (23)

	.  reduce 23


state 9
	primitive_type : INSPACE .  (24)

	.  reduce 24


state 10
	primitive_type : AFFSPACE .  (25)

	.  reduce 25


state 11
	funtion_declaration : FUNCTION . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	ID  shift 16
	.  error


state 12
	program : programs EOF .  (1)

	.  reduce 1


state 13
	programs : programs funtion_declaration .  (3)

	.  reduce 3


state 14
	programs : programs vdecl .  (4)

	.  reduce 4


state 15
	vdecl : primitive_type . varid SEMI  (14)
	vdecl : primitive_type . arrayid SEMI  (15)

	ID  shift 17
	.  error

	varid  goto 18
	arrayid  goto 19


state 16
	funtion_declaration : FUNCTION ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	LPAREN  shift 20
	.  error


state 17
	varid : ID .  (16)
	arrayid : ID . LBRACK RBRACK  (18)

	LBRACK  shift 21
	SEMI  reduce 16
	COMMA  reduce 16


state 18
	vdecl : primitive_type varid . SEMI  (14)
	varid : varid . COMMA ID  (17)

	SEMI  shift 22
	COMMA  shift 23
	.  error


state 19
	vdecl : primitive_type arrayid . SEMI  (15)
	arrayid : arrayid . COMMA ID LBRACK RBRACK  (19)

	SEMI  shift 24
	COMMA  shift 25
	.  error


state 20
	funtion_declaration : FUNCTION ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	VAR  shift 5
	VECTOR  shift 6
	VECSPACE  shift 7
	MATRIX  shift 8
	INSPACE  shift 9
	AFFSPACE  shift 10
	RPAREN  reduce 6

	formals_opt  goto 26
	formal_list  goto 27
	formal  goto 28
	primitive_type  goto 29


state 21
	arrayid : ID LBRACK . RBRACK  (18)

	RBRACK  shift 30
	.  error


state 22
	vdecl : primitive_type varid SEMI .  (14)

	.  reduce 14


state 23
	varid : varid COMMA . ID  (17)

	ID  shift 31
	.  error


state 24
	vdecl : primitive_type arrayid SEMI .  (15)

	.  reduce 15


state 25
	arrayid : arrayid COMMA . ID LBRACK RBRACK  (19)

	ID  shift 32
	.  error


state 26
	funtion_declaration : FUNCTION ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 33
	.  error


state 27
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA formal  (9)

	COMMA  shift 34
	RPAREN  reduce 7


state 28
	formal_list : formal .  (8)

	.  reduce 8


state 29
	formal : primitive_type . ID  (10)
	formal : primitive_type . ID LBRACK RBRACK  (11)

	ID  shift 35
	.  error


state 30
	arrayid : ID LBRACK RBRACK .  (18)

	.  reduce 18


state 31
	varid : varid COMMA ID .  (17)

	.  reduce 17


state 32
	arrayid : arrayid COMMA ID . LBRACK RBRACK  (19)

	LBRACK  shift 36
	.  error


state 33
	funtion_declaration : FUNCTION ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 37
	.  error


state 34
	formal_list : formal_list COMMA . formal  (9)

	VAR  shift 5
	VECTOR  shift 6
	VECSPACE  shift 7
	MATRIX  shift 8
	INSPACE  shift 9
	AFFSPACE  shift 10
	.  error

	formal  goto 38
	primitive_type  goto 29


state 35
	formal : primitive_type ID .  (10)
	formal : primitive_type ID . LBRACK RBRACK  (11)

	LBRACK  shift 39
	RPAREN  reduce 10
	COMMA  reduce 10


state 36
	arrayid : arrayid COMMA ID LBRACK . RBRACK  (19)

	RBRACK  shift 40
	.  error


state 37
	funtion_declaration : FUNCTION ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (12)

	.  reduce 12

	vdecl_list  goto 41


state 38
	formal_list : formal_list COMMA formal .  (9)

	.  reduce 9


state 39
	formal : primitive_type ID LBRACK . RBRACK  (11)

	RBRACK  shift 42
	.  error


state 40
	arrayid : arrayid COMMA ID LBRACK RBRACK .  (19)

	.  reduce 19


state 41
	funtion_declaration : FUNCTION ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (13)
	stmt_list : .  (26)

	VSCONST  shift 43
	LBRACE  shift 44
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	VAR  shift 5
	VECTOR  shift 6
	VECSPACE  shift 7
	MATRIX  shift 8
	INSPACE  shift 48
	AFFSPACE  shift 49
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	LITERAL  shift 54
	ID  shift 55
	RBRACE  reduce 26

	vdecl  goto 56
	stmt_list  goto 57
	primitive_type  goto 15
	function_statements  goto 58
	statement  goto 59
	expression  goto 60
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 42
	formal : primitive_type ID LBRACK RBRACK .  (11)

	.  reduce 11


state 43
	vector_space : VSCONST . LPAREN expression_list RPAREN  (73)

	LPAREN  shift 67
	.  error


state 44
	statement : LBRACE . stmt_list RBRACE  (32)
	arrays : LBRACE . expression_list RBRACE  (76)
	stmt_list : .  (26)

	VSCONST  shift 43
	LBRACE  shift 44
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	LITERAL  shift 54
	ID  shift 55
	RBRACE  reduce 26

	stmt_list  goto 70
	function_statements  goto 58
	statement  goto 59
	expression  goto 71
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 72


state 45
	expression : LBRACK . LBRACK expression COMMA expression RBRACK RBRACK  (57)
	vector : LBRACK . expression_list RBRACK  (66)
	matrix : LBRACK . matrix_elements_list RBRACK  (69)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 74
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 75
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 76
	matrix_elements_list  goto 77
	row_elements_list  goto 78


state 46
	expression : LPAREN . expression RPAREN  (55)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 79
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 47
	expression : LT . expression COMMA expression GT  (59)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 80
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 48
	primitive_type : INSPACE .  (24)
	inner_space : INSPACE . LPAREN expression COMMA expression RPAREN  (74)

	LPAREN  shift 81
	ID  reduce 24


state 49
	primitive_type : AFFSPACE .  (25)
	aff_space : AFFSPACE . LPAREN expression COMMA expression RPAREN  (75)

	LPAREN  shift 82
	ID  reduce 25


state 50
	statement : WHILE . expression LBRACE stmt_list RBRACE  (36)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 83
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 51
	statement : FOR . VAR ID ASSIGN LITERAL COLON LITERAL LBRACE stmt_list RBRACE  (35)

	VAR  shift 84
	.  error


state 52
	statement : IF . expression LBRACE stmt_list RBRACE  (33)
	statement : IF . expression LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (34)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 85
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 53
	statement : RETURN . expression SEMI  (31)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 86
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 54
	expression : LITERAL .  (37)

	.  reduce 37


state 55
	expression : ID .  (38)
	expression : ID . ASSIGN expression  (53)
	expression : ID . LPAREN arguments_opt RPAREN  (54)

	LPAREN  shift 87
	ASSIGN  shift 88
	LBRACE  reduce 38
	RBRACE  reduce 38
	RBRACK  reduce 38
	RPAREN  reduce 38
	SEMI  reduce 38
	COMMA  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	PLUS_DOT  reduce 38
	MINUS_DOT  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	TIMES_DOT  reduce 38
	DIVIDE_DOT  reduce 38
	TRANSPOSE  reduce 38
	BELONGS  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	EQ  reduce 38
	NEQ  reduce 38


state 56
	vdecl_list : vdecl_list vdecl .  (13)

	.  reduce 13


state 57
	funtion_declaration : FUNCTION ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)

	RBRACE  shift 89
	.  error


state 58
	stmt_list : function_statements .  (27)

	.  reduce 27


state 59
	function_statements : statement .  (28)
	function_statements : statement . function_statements  (29)

	VSCONST  shift 43
	LBRACE  shift 44
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	LITERAL  shift 54
	ID  shift 55
	RBRACE  reduce 28

	function_statements  goto 90
	statement  goto 59
	expression  goto 60
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 60
	statement : expression . SEMI  (30)
	expression : expression . PLUS_DOT expression  (39)
	expression : expression . MINUS_DOT expression  (40)
	expression : expression . TIMES_DOT expression  (41)
	expression : expression . DIVIDE_DOT expression  (42)
	expression : expression . PLUS expression  (43)
	expression : expression . MINUS expression  (44)
	expression : expression . TIMES expression  (45)
	expression : expression . DIVIDE expression  (46)
	expression : expression . EQ expression  (47)
	expression : expression . NEQ expression  (48)
	expression : expression . LT expression  (49)
	expression : expression . LEQ expression  (50)
	expression : expression . GT expression  (51)
	expression : expression . GEQ expression  (52)
	expression : expression . TRANSPOSE  (56)
	expression : expression . BELONGS expression  (58)

	SEMI  shift 91
	PLUS  shift 92
	MINUS  shift 93
	PLUS_DOT  shift 94
	MINUS_DOT  shift 95
	TIMES  shift 96
	DIVIDE  shift 97
	TIMES_DOT  shift 98
	DIVIDE_DOT  shift 99
	TRANSPOSE  shift 100
	BELONGS  shift 101
	LT  shift 102
	LEQ  shift 103
	GT  shift 104
	GEQ  shift 105
	EQ  shift 106
	NEQ  shift 107
	.  error


state 61
	expression : vector .  (60)

	.  reduce 60


state 62
	expression : matrix .  (61)

	.  reduce 61


state 63
	expression : vector_space .  (62)

	.  reduce 62


state 64
	expression : inner_space .  (63)

	.  reduce 63


state 65
	expression : aff_space .  (64)

	.  reduce 64


state 66
	expression : arrays .  (65)

	.  reduce 65


state 67
	vector_space : VSCONST LPAREN . expression_list RPAREN  (73)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 75
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 108


state 68
	inner_space : INSPACE . LPAREN expression COMMA expression RPAREN  (74)

	LPAREN  shift 81
	.  error


state 69
	aff_space : AFFSPACE . LPAREN expression COMMA expression RPAREN  (75)

	LPAREN  shift 82
	.  error


state 70
	statement : LBRACE stmt_list . RBRACE  (32)

	RBRACE  shift 109
	.  error


state 71
	statement : expression . SEMI  (30)
	expression : expression . PLUS_DOT expression  (39)
	expression : expression . MINUS_DOT expression  (40)
	expression : expression . TIMES_DOT expression  (41)
	expression : expression . DIVIDE_DOT expression  (42)
	expression : expression . PLUS expression  (43)
	expression : expression . MINUS expression  (44)
	expression : expression . TIMES expression  (45)
	expression : expression . DIVIDE expression  (46)
	expression : expression . EQ expression  (47)
	expression : expression . NEQ expression  (48)
	expression : expression . LT expression  (49)
	expression : expression . LEQ expression  (50)
	expression : expression . GT expression  (51)
	expression : expression . GEQ expression  (52)
	expression : expression . TRANSPOSE  (56)
	expression : expression . BELONGS expression  (58)
	expression_list : expression .  (67)
	expression_list : expression . COMMA expression_list  (68)

	SEMI  shift 91
	COMMA  shift 110
	PLUS  shift 92
	MINUS  shift 93
	PLUS_DOT  shift 94
	MINUS_DOT  shift 95
	TIMES  shift 96
	DIVIDE  shift 97
	TIMES_DOT  shift 98
	DIVIDE_DOT  shift 99
	TRANSPOSE  shift 100
	BELONGS  shift 101
	LT  shift 102
	LEQ  shift 103
	GT  shift 104
	GEQ  shift 105
	EQ  shift 106
	NEQ  shift 107
	RBRACE  reduce 67


state 72
	arrays : LBRACE expression_list . RBRACE  (76)

	RBRACE  shift 111
	.  error


state 73
	arrays : LBRACE . expression_list RBRACE  (76)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 75
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 72


state 74
	expression : LBRACK . LBRACK expression COMMA expression RBRACK RBRACK  (57)
	expression : LBRACK LBRACK . expression COMMA expression RBRACK RBRACK  (57)
	vector : LBRACK . expression_list RBRACK  (66)
	matrix : LBRACK . matrix_elements_list RBRACK  (69)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 74
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 112
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 76
	matrix_elements_list  goto 77
	row_elements_list  goto 78


state 75
	expression : expression . PLUS_DOT expression  (39)
	expression : expression . MINUS_DOT expression  (40)
	expression : expression . TIMES_DOT expression  (41)
	expression : expression . DIVIDE_DOT expression  (42)
	expression : expression . PLUS expression  (43)
	expression : expression . MINUS expression  (44)
	expression : expression . TIMES expression  (45)
	expression : expression . DIVIDE expression  (46)
	expression : expression . EQ expression  (47)
	expression : expression . NEQ expression  (48)
	expression : expression . LT expression  (49)
	expression : expression . LEQ expression  (50)
	expression : expression . GT expression  (51)
	expression : expression . GEQ expression  (52)
	expression : expression . TRANSPOSE  (56)
	expression : expression . BELONGS expression  (58)
	expression_list : expression .  (67)
	expression_list : expression . COMMA expression_list  (68)

	COMMA  shift 110
	PLUS  shift 92
	MINUS  shift 93
	PLUS_DOT  shift 94
	MINUS_DOT  shift 95
	TIMES  shift 96
	DIVIDE  shift 97
	TIMES_DOT  shift 98
	DIVIDE_DOT  shift 99
	TRANSPOSE  shift 100
	BELONGS  shift 101
	LT  shift 102
	LEQ  shift 103
	GT  shift 104
	GEQ  shift 105
	EQ  shift 106
	NEQ  shift 107
	RBRACE  reduce 67
	RBRACK  reduce 67
	RPAREN  reduce 67
	SEMI  reduce 67


state 76
	vector : LBRACK expression_list . RBRACK  (66)
	row_elements_list : expression_list . SEMI  (72)

	RBRACK  shift 113
	SEMI  shift 114
	.  error


state 77
	matrix : LBRACK matrix_elements_list . RBRACK  (69)

	RBRACK  shift 115
	.  error


state 78
	matrix_elements_list : row_elements_list .  (70)
	matrix_elements_list : row_elements_list . matrix_elements_list  (71)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	RBRACK  reduce 70

	expression  goto 75
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66
	expression_list  goto 116
	matrix_elements_list  goto 117
	row_elements_list  goto 78


state 79
	expression : expression . PLUS_DOT expression  (39)
	expression : expression . MINUS_DOT expression  (40)
	expression : expression . TIMES_DOT expression  (41)
	expression : expression . DIVIDE_DOT expression  (42)
	expression : expression . PLUS expression  (43)
	expression : expression . MINUS expression  (44)
	expression : expression . TIMES expression  (45)
	expression : expression . DIVIDE expression  (46)
	expression : expression . EQ expression  (47)
	expression : expression . NEQ expression  (48)
	expression : expression . LT expression  (49)
	expression : expression . LEQ expression  (50)
	expression : expression . GT expression  (51)
	expression : expression . GEQ expression  (52)
	expression : LPAREN expression . RPAREN  (55)
	expression : expression . TRANSPOSE  (56)
	expression : expression . BELONGS expression  (58)

	RPAREN  shift 118
	PLUS  shift 92
	MINUS  shift 93
	PLUS_DOT  shift 94
	MINUS_DOT  shift 95
	TIMES  shift 96
	DIVIDE  shift 97
	TIMES_DOT  shift 98
	DIVIDE_DOT  shift 99
	TRANSPOSE  shift 100
	BELONGS  shift 101
	LT  shift 102
	LEQ  shift 103
	GT  shift 104
	GEQ  shift 105
	EQ  shift 106
	NEQ  shift 107
	.  error


state 80
	expression : expression . PLUS_DOT expression  (39)
	expression : expression . MINUS_DOT expression  (40)
	expression : expression . TIMES_DOT expression  (41)
	expression : expression . DIVIDE_DOT expression  (42)
	expression : expression . PLUS expression  (43)
	expression : expression . MINUS expression  (44)
	expression : expression . TIMES expression  (45)
	expression : expression . DIVIDE expression  (46)
	expression : expression . EQ expression  (47)
	expression : expression . NEQ expression  (48)
	expression : expression . LT expression  (49)
	expression : expression . LEQ expression  (50)
	expression : expression . GT expression  (51)
	expression : expression . GEQ expression  (52)
	expression : expression . TRANSPOSE  (56)
	expression : expression . BELONGS expression  (58)
	expression : LT expression . COMMA expression GT  (59)

	COMMA  shift 119
	PLUS  shift 92
	MINUS  shift 93
	PLUS_DOT  shift 94
	MINUS_DOT  shift 95
	TIMES  shift 96
	DIVIDE  shift 97
	TIMES_DOT  shift 98
	DIVIDE_DOT  shift 99
	TRANSPOSE  shift 100
	BELONGS  shift 101
	LT  shift 102
	LEQ  shift 103
	GT  shift 104
	GEQ  shift 105
	EQ  shift 106
	NEQ  shift 107
	.  error


state 81
	inner_space : INSPACE LPAREN . expression COMMA expression RPAREN  (74)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 120
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66


state 82
	aff_space : AFFSPACE LPAREN . expression COMMA expression RPAREN  (75)

	VSCONST  shift 43
	LBRACE  shift 73
	LBRACK  shift 45
	LPAREN  shift 46
	LT  shift 47
	INSPACE  shift 68
	AFFSPACE  shift 69
	LITERAL  shift 54
	ID  shift 55
	.  error

	expression  goto 121
	vector  goto 61
	matrix  goto 62
	vector_space  goto 63
	inner_space  goto 64
	aff_space  goto 65
	arrays  goto 66

